syntax = "proto2";

package challenge;

message ClientInfo {
  optional string address = 1;
  required int32 port = 2;
  required int32 package_size = 3;
  required string file_name = 4;
}
